--- a/spike-web/pom.xml
+++ b/spike-web/pom.xml
@@ -88,5 +88,19 @@
 			<artifactId>commons-dbcp</artifactId>
 			<version>${dhcp.version}</version>
 		</dependency>
+		
+		<!-- logback -->
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>${logback.version}</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-core</artifactId>
+			<version>${logback.version}</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 </project>
