--- a/spike-web/src/main/webapp/WEB-INF/web.xml
+++ b/spike-web/src/main/webapp/WEB-INF/web.xml
@@ -8,15 +8,15 @@
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>
-			classpath*:application-context*.xml
+			classpath*:applicationContext*.xml
 		</param-value>
 	</context-param>
-	
+
 	<!-- Spring监听器 -->
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
-	
+
 	<filter>
 		<filter-name>characterEncodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -32,12 +32,12 @@
 
 	<!-- spring MVC config start -->
 	<servlet>
-		<servlet-name>spring</servlet-name>
+		<servlet-name>dispatch</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
-		<servlet-name>spring</servlet-name>
+		<servlet-name>dispatch</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	<!-- spring MVC config end -->
