--- a/spike-dao/src/main/resouces.dev/jdbc.properties
+++ b/spike-dao/src/main/resouces.dev/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/spike_test?useSSL=false&characterEncoding=UTF-8
+jdbc.url=jdbc:mysql://192.168.1.105:3306/spike_test?useSSL=false&characterEncoding=UTF-8
 jdbc.username=root
 jdbc.password=123456
